--- a/src/Components/Layout/ShoppingItems.module.css
+++ b/src/Components/Layout/ShoppingItems.module.css
@@ -1,44 +1,8 @@
-.ItemsCard {
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid rgb(223, 221, 221);
-  justify-content: space-between;
-  margin: 1% 3%;
-  padding: 3% 1%;
-}
-
 .WrapperItemsCard {
   margin: 5% 25%;
-  border-radius: 0px 40px;
-  box-shadow: 2px 4px 16px 1px;
-  padding: 2%;
-  background-color: rgb(43, 42, 42);
-}
-
-.WrapperItemsCard ul {
+  border-radius: 24px;
+  padding: 1%;
+  /* box-shadow: 2px 4px 16px 1px; */
+  background-color: #3b269b;
   list-style-type: none;
-  padding: none;
-  margin: none;
-}
-.buttonCard {
-  display: flex;
-  align-items: center;
-}
-
-.buttonCard button {
-  outline-style: none;
-  width: 6.5rem;
-  height: 1.8rem;
-  margin: 0rem;
-  border-radius: 16px;
-  border: none;
-  font-size: 0.9rem;
-  padding: 0 0.4rem;
-  font-weight: bold;
-  color: white;
-  background-color: rgb(150, 148, 151);
-}
-
-.buttonCard button:hover {
-  background-color: rgb(64, 64, 65);
 }
