--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -1,11 +1,10 @@
 .NavBar {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   color: white;
-  background-color: rgb(75, 74, 73);
+  background-color: #3a2d80;
   align-items: center;
   width: 100%;
-  /* height: 3rem; */
   font-weight: bold;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem;
 }
