--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(102, 102, 102);
+  background-color: #6957e7;
   color: white;
   font-weight: bold;
   width: 100%;
